<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="60dp"
    android:paddingLeft="60dp"
    android:orientation="vertical"
    android:backgroundTint="@color/cardview_dark_background">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:adjustViewBounds="true"
        android:src="@drawable/tokoku"/>

    <Button
        android:id="@+id/btn_belanja"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/belanja"
        android:textColor="@color/hijau_tokoku"
        android:backgroundTint="@color/cardview_light_background"/>

    <Button
        android:id="@+id/btn_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:text="@string/about"
        android:textColor="@color/hijau_tokoku"
        android:backgroundTint="@color/cardview_light_background"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/buatan_afif_raihan"
        android:gravity="bottom"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="45dp"
        android:textStyle="italic"
        android:textColor="@color/hijau_tokoku"/>

</LinearLayout>